Add folder for images and update 1 product card

--- a/index.html
+++ b/index.html
@@ -19,7 +19,35 @@
           <a href="#">Account</a>
           <a href="#">Cart Item</a>
         </section>
+        <div>
+          <h1>YoBubs!</h1>
+          <p>Insert Search Bar Something else</p>
+          <h3>Something else</h3>
+        </div>
       </nav>
     </header>
+    <main>
+      <aside>
+        <ul>
+          <li>Milk Tea</li>
+          <li>Original Tea</li>
+          <li>Fruit Tea</li>
+          <li>Frozen Freeze</li>
+          <li>Coffee</li>
+          <li>Snacks</li>
+          <li>Merchandise</li>
+        </ul>
+      </aside>
+      <article>
+        <h2>Product Name</h2>
+        <img src="./images/" alt="Product Image" />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
+      </article>
+    </main>
   </body>
 </html>
